RESOLVED FIXED69853
[chromium] Fix compilation guards in ScrollAnimatorNone (GESTURE_EVENTS).
https://bugs.webkit.org/show_bug.cgi?id=69853
Summary [chromium] Fix compilation guards in ScrollAnimatorNone (GESTURE_EVENTS).
W. James MacLean
Reported 2011-10-11 10:53:39 PDT
[chromium] Fix compilation guards in ScrollAnimatorNone (GESTURE_EVENTS).
Attachments
Patch (2.61 KB, patch)
2011-10-11 10:57 PDT, W. James MacLean
no flags
W. James MacLean
Comment 1 2011-10-11 10:57:18 PDT
Kenneth Russell
Comment 2 2011-10-11 11:02:10 PDT
Comment on attachment 110538 [details] Patch Looks OK. Assuming you did a build without GESTURE_EVENTS enabled. r=me
W. James MacLean
Comment 3 2011-10-11 11:38:08 PDT
(In reply to comment #2) > (From update of attachment 110538 [details]) > Looks OK. Assuming you did a build without GESTURE_EVENTS enabled. r=me I'm running it through the try servers in parallel ...
WebKit Review Bot
Comment 4 2011-10-11 16:42:49 PDT
Comment on attachment 110538 [details] Patch Clearing flags on attachment: 110538 Committed r97195: <http://trac.webkit.org/changeset/97195>
WebKit Review Bot
Comment 5 2011-10-11 16:42:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.