[chromium] Fix compilation guards in ScrollAnimatorNone (GESTURE_EVENTS). https://bugs.webkit.org/show_bug.cgi?id=69853

Reviewed by Kenneth Russell.

Adding missing guards ENABLE(GESTURE_EVENTS) in ScrollAnimatorNone. So
far this hasn't been a problem since GESTURE_EVENTS are usually turned on
whenever SMOOTH_SCROLLING is, but it could be a problem if this changes.

No new tests (compilation without errors is the test).

* platform/ScrollAnimatorNone.cpp:
* platform/ScrollAnimatorNone.h:


Canonical link: https://commits.webkit.org/85928@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97195 268f45cc-cd09-0410-ab3c-d52691b4dbfc